...
    <string name="way_name_camino_frances">Camino de Santiago</string>
    <string name="way_route_camino_frances">The French Way, Saint-Jean-Pied-de-Port to Santiago de Compostela</string>
    <string name="way_name_via_francigena">Via Francigena</string>
    <string name="way_route_via_francigena">The Great St Bernard Pass to Rome</string>
    <string name="way_name_milan_duomo_navigli">Milan</string>
    <string name="way_route_milan_duomo_navigli">From the Duomo to the Navigli, by the Castello</string>
    <string name="way_outing_milan_duomo_navigli">A walk in Milan</string>
    <string name="way_name_rome_colosseum_vatican">Rome</string>
    <string name="way_route_rome_colosseum_vatican">From the Colosseum to St Peter’s, by the Pantheon</string>
    <string name="way_outing_rome_colosseum_vatican">A walk in Rome</string>
    <string name="way_name_paris_vosges_eiffel">Paris</string>
    <string name="way_route_paris_vosges_eiffel">From Place des Vosges to the Eiffel Tower, by the Louvre</string>
    <string name="way_outing_paris_vosges_eiffel">A walk in Paris</string>
...
